--- a/main.tex
+++ b/main.tex
@@ -86,17 +86,15 @@ and outputs a new circuit $C^\prime,$ that has the same functionality as the inp
 \section*{Acknowledgements}
 This material is based upon work supported by the Air Force Office of Scientific Research under award number FA9550-17-1-0083, Canada's   NFRF and NSERC, an Ontario ERA, and the University of Ottawa’s Research Chairs program.
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Section Appendix: Include iO for Clifford Circuits and bound on complex coefficients
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\appendix
+\input{Appendix.tex}
 
-%\bibliographystyle{alpha}
-%\bibliography{full.bib}
-%\bibliography{quantum.bib}
 
-%\bibliography{more.bib}
-%\bibliographystyle{./bibtex/bst/alphaarxiv}
-%\bibliography{bibtex/bib/full.bib,bibtex/bib/quantum.bib}
 
-%add new entries to more.bib, they will be cleaned and entered into quantum.bib by the BibMaster
 \bibliographystyle{bst/alphaarxiv}
-\bibliography{bib/full,bib/quantum,bib/more}
+\bibliography{bib/full,bib/quantum,bib}
 
 \end{document} 
