--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,6 @@
 %\usepackage{cleveref}
 \floatname{algorithm}{Algorithm}
 
-
 %********************
 \input{commands.tex}
 %********************
@@ -87,14 +86,16 @@ and outputs a new circuit $C^\prime,$ that has the same functionality as the inp
 This material is based upon work supported by the Air Force Office of Scientific Research under award number FA9550-17-1-0083, Canada's   NFRF and NSERC, an Ontario ERA, and the University of Ottawa’s Research Chairs program.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%\bibliographystyle{bst/alphaarxiv}
+\bibliography{bib/full.bib/quantum.bib}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Section Appendix: Include iO for Clifford Circuits and bound on complex coefficients
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
 \input{Appendix.tex}
-
-
-
-\bibliographystyle{bst/alphaarxiv}
-\bibliography{bib/full,bib/quantum,bib}
 
 \end{document} 
