--- a/intro.tex
+++ b/intro.tex
@@ -64,6 +64,11 @@ Although Clifford circuits can be efficiently simulated on a classical computer 
 %Section applications
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Applications}
+Two settings
+
+1) If we had full iO.
+
+2) Applications of iO for the circuit class that we are doing. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
